--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="message-input">
             <h3>Send a message to a fellow user!</h3>
-            <input type="text" placeholder="Send message here..."></input>
+            <input id="message-input" value="" type="text" placeholder="Send message here..."></input>
             <button id="submit-btn">Submit!</button>
         </div>
     </body>
